// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-css-modules should create valid app 1`] = `
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-2ae9f933930327de819a.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-b572a5b0167e35728e4d.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-e75d9e10fa19daacb58b.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-2ae9f933930327de819a.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-b572a5b0167e35728e4d.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-e75d9e10fa19daacb58b.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
         <div class="_3YtmnHj lwsthgY"
              data-automation-text="true"
         >
-          Initial render
+          Updated render
         </div>
       </div>
     </div>

`;

exports[`react-css-modules should generate the expected files 1`] = `
Object {
  "index.html": <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-2ae9f933930327de819a.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-b572a5b0167e35728e4d.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-e75d9e10fa19daacb58b.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime-2ae9f933930327de819a.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-b572a5b0167e35728e4d.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-e75d9e10fa19daacb58b.js"
    >
    </script>
  </body>
</html>,
  "main-bfe8911084b821bf8edd.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
.Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
,
  "main-e75d9e10fa19daacb58b.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-2ae9f933930327de819a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-b572a5b0167e35728e4d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
